--- a/templates/chaplin_controller.coffee.erb
+++ b/templates/chaplin_controller.coffee.erb
@@ -8,7 +8,7 @@ define [
 
   class <%= plural_camelize_name %>Controller extends Chaplin.Controller
 
-    title: '<% plural_camelize_name %>'
+    title: '<%= plural_camelize_name %>'
     historyURL: (params) ->
       '<%= plural_object_name %>'
 
