--- a/templates/chaplin_model.coffee.erb
+++ b/templates/chaplin_model.coffee.erb
@@ -3,7 +3,7 @@ define [
 ], (Model) ->
   'use strict'
 
-  class <%= plural_camelize_name %> extends Model
+  class <%= camelize_name %> extends Model
 
     initialize: ->
       super
