--- a/templates/chaplin_view.coffee.erb
+++ b/templates/chaplin_view.coffee.erb
@@ -1,14 +1,14 @@
 define [
   'views/base/view'
-  'text!templates/<%= plural_underscore_name %>/index.hbs'
+  'text!templates/<%= underscore_name %>/index.hbs'
   ], (View, template) ->
    'use strict'
 
-   class <%= plural_camelize_name %>IndexView extends View
+   class <%= camelize_name %>IndexView extends View
 
     template: template
     template = null
-    id: '<%= plural_underscore_name %>'
+    id: '<%= plural_underscore_name %>_view'
     container: ''
     autoRender: true
 
