--- a/templates/chaplin_view.coffee.erb
+++ b/templates/chaplin_view.coffee.erb
@@ -1,6 +1,6 @@
 define [
   'views/base/view'
-  'text!templates/<%= underscore_name %>/index.hbs'
+  'text!templates/<%= underscore_name %>/<%= @action_name %>.hbs'
   ], (View, template) ->
    'use strict'
 
