changed some bugs in the view template again

--- a/templates/chaplin_view.coffee.erb
+++ b/templates/chaplin_view.coffee.erb
@@ -8,7 +8,7 @@ define [
 
     template: template
     template = null
-    id: '<%= plural_underscore_name %>_<%= @action_name %>_view'
+    id: '<%= underscore_name %>_<%= @action_name %>_view'
     container: ''
     autoRender: true
 
