--- a/templates/chaplin_template_index.hbs.erb
+++ b/templates/chaplin_template_index.hbs.erb
@@ -1,1 +1,1 @@
-<h1><%= camelize_name %><%= Thor::Util.camel_case(@action_name) %></h1>
+<h1><%= camelize_name %>/<%= Thor::Util.camel_case(@action_name) %></h1>
