After generating, init test should fail in the first place

--- a/templates/src/chaplin_controller.coffee.erb
+++ b/templates/src/chaplin_controller.coffee.erb
@@ -10,3 +10,7 @@ define [
     title: '<%= camelize_name %>'
     historyURL: (params) ->
       '<%= plural_object_name %>'
+
+    # initialize: ->
+    #   super
+    #   @title
