--- a/templates/test/view_spec.coffee.erb
+++ b/templates/test/view_spec.coffee.erb
@@ -10,3 +10,8 @@ define [
 
     beforeEach ->
       @<%= camelize_name %>View = new <%= camelize_name %>View()
+
+    describe '@initialize', ->
+
+      it 'should have a initialize function', ->
+        expect(@<%= camelize_name %>View.initialize).to.be.a('function')
