--- a/templates/test/model_spec.coffee.erb
+++ b/templates/test/model_spec.coffee.erb
@@ -10,3 +10,8 @@ define [
 
     beforeEach ->
       @<%= camelize_name %>Model = new <%= camelize_name %>Model()
+
+    describe '@initialize', ->
+
+      it 'should have a initialize function', ->
+        expect(@<%= camelize_name %>Model.initialize).to.be.a('function')
