fixed some minor spelling bugs

--- a/templates/test/model_spec.coffee.erb
+++ b/templates/test/model_spec.coffee.erb
@@ -2,7 +2,7 @@
 
 define [
   'chaplin'
-  'models/<%= underscore_name %>_model'
+  'models/<%= underscore_name %>'
 ], (Chaplin, <%= camelize_name %>Model) ->
   'use strict'
 
