--- a/templates/test/controller_spec.coffee.erb
+++ b/templates/test/controller_spec.coffee.erb
@@ -8,10 +8,15 @@ define [
 
   describe 'Controllers/<%= camelize_name %>Controller', ->
 
-     beforeEach ->
-        @<%= camelize_name %>Controller = new <%= camelize_name %>Controller()
+    beforeEach ->
+      @<%= camelize_name %>Controller = new <%= camelize_name %>Controller()
 
     describe '@initialize', ->
 
       it 'should have a initialize function', ->
         expect(@<%= camelize_name %>Controller.initialize).to.be.a('function')
+
+      it 'should be called on startup'
+        spy = sinon.spy(@<%= camelize_name %>Controller.__proto__, 'initialize')
+        @<%= camelize_name %>Controller.initialize()
+        expect(spy.calledOnce).to.be.true
