--- a/templates/test/model_spec.coffee.erb
+++ b/templates/test/model_spec.coffee.erb
@@ -15,3 +15,8 @@ define [
 
       it 'should have a initialize function', ->
         expect(@<%= camelize_name %>Model.initialize).to.be.a('function')
+
+      it 'should be called on startup'
+        spy = sinon.spy(@<%= camelize_name %>Model.__proto__, 'initialize')
+        @<%= camelize_name %>Model.initialize()
+        expect(spy.calledOnce).to.be.true
