small changes on naming conventions

--- a/templates/src/chaplin_view.coffee.erb
+++ b/templates/src/chaplin_view.coffee.erb
@@ -1,6 +1,6 @@
 define [
   'views/base/view'
-  'text!templates/<%= underscore_name %>/<%= @action_name %>.hbs'
+  'text!templates/<%= underscore_name %>/<%= @action_name %>.html'
 ], (View, template) ->
   'use strict'
 
