--- a/templates/src/chaplin_template_index.haml.erb
+++ b/templates/src/chaplin_template_index.haml.erb
@@ -1,1 +1,1 @@
-.h1 <%= pluralize(camelize_name) %><%= "/" + Thor::Util.camel_case(@action_name) unless @action == 'index' %>
+%h1 <%= pluralize(camelize_name) %><%= "/" + Thor::Util.camel_case(@action_name) unless @action == 'index' %>
